<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="5dp"
    android:paddingTop="5dp"
    android:paddingEnd="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/fragment_list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/dummy_txt_le_zinc"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_list_item_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/dummy_txt_120m"
        app:layout_constraintEnd_toStartOf="@+id/fragment_list_item_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fragment_list_item_picture"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/icd_restaurant_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_list_item_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/dummy_txt_french_12_rue_du_faubourg_poissoni_re"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/fragment_list_item_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_item_title" />

    <TextView
        android:id="@+id/fragment_list_item_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/ic_person_24"
        android:text="@string/dummy_txt_2"
        app:layout_constraintEnd_toStartOf="@id/fragment_list_item_picture"
        app:layout_constraintStart_toEndOf="@id/fragment_list_item_address"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_item_title" />

    <TextView
        android:id="@+id/fragment_list_item_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/dummy_txt_open_until_7pm"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_item_address" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/fragment_list_item_rating"
        style="@style/RatingBarSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:numStars="3"
        android:rating="0"
        android:scaleX="-1"
        android:stepSize="1"
        android:theme="@style/RatingBarSmall"
        app:layout_constraintEnd_toStartOf="@+id/fragment_list_item_picture"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_item_address" />

</androidx.constraintlayout.widget.ConstraintLayout>