<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_activity_nav_header_picture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/image_nav_drawer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/icd_background_picture" />

    <TextView
        android:id="@+id/main_activity_nav_header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:text="@string/dummy_text_go_for_lunch"
        android:textSize="@dimen/nav_header_title_size"
        android:textColor="@android:color/white"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/main_activity_nav_header_picture"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/main_activity_nav_header_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_nav_header_title"
        app:layout_constraintBottom_toBottomOf="@id/main_activity_nav_header_picture"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/idc_nav_header_avatar_picture" />

    <TextView
        android:id="@+id/main_activity_nav_header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/white"
        android:text="@string/dummy_text_john_smith"
        app:layout_constraintTop_toTopOf="@+id/main_activity_nav_header_avatar"
        app:layout_constraintStart_toEndOf="@+id/main_activity_nav_header_avatar"/>

    <TextView
        android:id="@+id/main_activity_nav_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="@dimen/end_screen_margin"
        android:textColor="@android:color/white"
        android:text="@string/dummy_text_jsmith_1337_gmail_com"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_nav_header_name"
        app:layout_constraintStart_toEndOf="@+id/main_activity_nav_header_avatar"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>