<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_chat_constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginStart="@dimen/margin_screen"
    android:layout_marginEnd="@dimen/margin_screen"
    android:layout_marginBottom="@dimen/margin_screen"
    android:layout_marginTop="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/fragment_chat_tv_chat_is_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_is_empty"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fragment_chat_message_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fragment_chat_message_edit"
        tools:listitem="@layout/fragment_chat_item"/>

    <ImageView
        android:id="@+id/fragment_chat_iv_photo_preview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fragment_chat_message_edit"
        android:contentDescription="@string/icd_picture_sent" />

    <ImageButton
        android:id="@+id/fragment_chat_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="5dp"
        android:src="@drawable/ic_add_photo_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/icd_button_add_image" />

    <EditText
        android:id="@+id/fragment_chat_message_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_chat_img_btn"
        app:layout_constraintEnd_toStartOf="@id/fragment_chat_send_btn"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <ImageButton
        android:id="@+id/fragment_chat_send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="5dp"
        android:src="@drawable/ic_send_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/icd_button_send_message" />

</androidx.constraintlayout.widget.ConstraintLayout>